# pips_trajectory_testing

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.78f350d  install_gazebo_7.txt  nodelet_plugins.xml  package.xml  turtlebot_pips_gazebo.rviz  world.xml
cfg/: PipsController.cfg  PipsTrajectoryTester.cfg  pips_controller.cfg
include/: GenAndTest.h  PipsAvoidance.h  TestTrajectory.h  nodelet.h  obstacle_avoidance_controller.h  pips_controller.h  pips_controller_impl.h  pips_demo.h  pips_demo_nodelet.h  pips_trajectory_controller.h  pips_trajectory_controller.hpp  pips_trajectory_tester.h  rate_tracker.h
include/pips_trajectory_testing/: depth_image_cc_wrapper.h  obstacle_avoidance_controller.h  pips_cc_wrapper.h  pips_trajectory_tester.h  stand_alone_collision_checker.h
include/tf_utils/: odom_to_tf.h
launch/: demo_bag.launch  gazebo.launch  gazebo_combined.launch  gazebo_empty.launch  nodelet.launch  online_testing.launch  passive_demo.launch  pips_controller.launch  test_bag.launch  test_controller.launch  test_controller2.launch
matlab/: Depth_PNG_To_PCD.m  OGM_To_Depth_PNG.m  PCD_to_OGM.m  Predictor_Learning.m  Predictor_Learning.m~  Predictor_Testing.m  Within_Range.m  critfun.m  dense_depth_viz.m  depth_png_to_pcd.m  gazebo_test.m  gazebo_test.m~  pips_visualization.m  regressor_loss.fig
matlab/output/: collide_dist_1.mat  collide_dist_10.mat  collide_dist_100.mat  collide_dist_101.mat  collide_dist_102.mat  collide_dist_103.mat  collide_dist_104.mat  collide_dist_105.mat  collide_dist_106.mat  collide_dist_107.mat  collide_dist_108.mat  collide_dist_109.mat  collide_dist_11.mat  collide_dist_110.mat  collide_dist_111.mat  collide_dist_112.mat  collide_dist_113.mat  collide_dist_114.mat  collide_dist_115.mat  collide_dist_116.mat  collide_dist_117.mat  collide_dist_118.mat  collide_dist_119.mat  collide_dist_12.mat  collide_dist_120.mat  collide_dist_121.mat  collide_dist_122.mat  collide_dist_123.mat  collide_dist_124.mat  collide_dist_125.mat  collide_dist_126.mat  collide_dist_127.mat  collide_dist_128.mat  collide_dist_129.mat  collide_dist_13.mat  collide_dist_130.mat  collide_dist_131.mat  collide_dist_132.mat  collide_dist_133.mat  collide_dist_134.mat  (+246 more)
param/: GenAndTest.yaml  PipsController.yaml
scripts/: set_model_pose.py
src/: GenAndTest.cpp  PipsAvoidance.cpp  PipsTrajectoryController.cpp  TestTrajectory.cpp  delayed_nodelet.cpp  depth_image_cc_node.cpp  depth_image_cc_wrapper.cpp  main.cpp  nodelet.cpp  obstacle_avoidance_controller.cpp  pip_controller_impl.cpp  pips_cc_wrapper.cpp  pips_controller.cpp  pips_controller_impl.cpp  pips_controller_node.cpp  pips_controller_nodelet.cpp  pips_demo.cpp  pips_demo_node.cpp  pips_demo_nodelet.cpp  pips_trajectory_tester.cpp  rosbag_nodelet_publisher.cpp  standalone.cpp  tester.cpp
srv/: TestCollisionStamped.srv
